--- a/.spacemacs.env
+++ b/.spacemacs.env
@@ -26,53 +26,88 @@
 
 # Environment variables:
 # ----------------------
-COLORFGBG=15;0
-COLORTERM=truecolor
-COMMAND_MODE=unix2003
-EDITOR=emacs
-FIGTERM_SESSION_ID=0f62d875-3add-430c-867f-b23ea2549051
-FIG_PID=53706
-FIG_PID=53681
-FIG_SET_PARENT=0f62d875-3add-430c-867f-b23ea2549051
-FIG_SET_PARENT_CHECK=1
-FIG_TERM=2.15.0
-FZF_DEFAULT_COMMAND=fd --type f --hidden --exclude .git
-HOME=/Users/dylan
-HOMEBREW_CELLAR=/opt/homebrew/Cellar
-HOMEBREW_PREFIX=/opt/homebrew
-HOMEBREW_REPOSITORY=/opt/homebrew
-INFOPATH=/opt/homebrew/share/info:
-INFOPATH=/opt/homebrew/share/info:/opt/homebrew/share/info:
-ITERM_PROFILE=Default
-ITERM_SESSION_ID=w0t1p0:FC9DB30E-B1B7-42CE-A0CA-FE0881FEFE82
-JAVA_HOME=/Users/dylan/Library/Caches/Coursier/arc/https/github.com/AdoptOpenJDK/openjdk8-binaries/releases/download/jdk8u292-b10/OpenJDK8U-jdk_x64_mac_hotspot_8u292b10.tar.gz/jdk8u292-b10/Contents/Home
-LANG=en_GB.UTF-8
-LC_FIG_SET_PARENT=0f62d875-3add-430c-867f-b23ea2549051
-LC_TERMINAL=iTerm2
-LC_TERMINAL_VERSION=3.4.19
-LESS=-R
-LOGNAME=dylan
-LSCOLORS=Gxfxcxdxbxegedabagacad
-MANPATH=/opt/homebrew/share/man::
-MANPATH=/opt/homebrew/share/man:/usr/share/man:/usr/local/share/man:/usr/local/MacGPG2/share/man:/opt/homebrew/share/man::
-NVM_DIR=/Users/dylan/.nvm
-OLDPWD=/Users/dylan
-PAGER=less
-PATH=/opt/homebrew/opt/openjdk/bin:/home/dylan/.emacs.d/bin:/opt/homebrew/opt/openjdk/bin:/home/dylan/.emacs.d/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/System/Cryptexes/App/usr/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/MacGPG2/bin:/Users/dylan/.fig/bin:/Users/dylan/.local/bin:/Users/dylan/Library/Application Support/Coursier/bin:/Users/dylan/.android-sdk-macosx/platform-tools/:/opt/homebrew/opt/fzf/bin
-PATH=/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/System/Cryptexes/App/usr/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/MacGPG2/bin:/opt/homebrew/opt/openjdk/bin:/home/dylan/.emacs.d/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/Users/dylan/.fig/bin:/Users/dylan/.local/bin:/Users/dylan/Library/Application Support/Coursier/bin:/Users/dylan/.android-sdk-macosx/platform-tools/:/opt/homebrew/opt/fzf/bin:/Users/dylan/Library/Application Support/Coursier/bin:/Users/dylan/.android-sdk-macosx/platform-tools/
-PWD=/Users/dylan
-SHELL=/bin/zsh
+ALLUSERSPROFILE='C:\ProgramData'
+APPDATA='C:\Users\dylan.ritchings\AppData\Roaming'
+AWS_CA_BUNDLE='C:\Program Files\Certificate Bundle\tls-ca-bundle.pem'
+BASH=/usr/bin/bash
+BASHOPTS=checkwinsize:cmdhist:complete_fullquote:extquote:force_fignore:globasciiranges:globskipdots:hostcomplete:interactive_comments:patsub_replacement:progcomp:promptvars:sourcepath
+BASH_ALIASES=()
+BASH_ARGC=()
+BASH_ARGV=()
+BASH_CMDS=()
+BASH_EXECUTION_STRING='set > c\:/Users/dylan.ritchings/AppData/Roaming/.spacemacs.d/.spacemacs.envxYNgCf'
+BASH_LINENO=()
+BASH_LOADABLES_PATH=/usr/local/lib/bash:/usr/lib/bash:/opt/local/lib/bash:/usr/pkg/lib/bash:/opt/pkg/lib/bash:.
+BASH_SOURCE=()
+BASH_VERSINFO=([0]="5" [1]="2" [2]="15" [3]="1" [4]="release" [5]="x86_64-pc-msys")
+BASH_VERSION='5.2.15(1)-release'
+COMMONPROGRAMFILES='C:\Program Files\Common Files'
+COMPUTERNAME=LAPGFPV3J3
+COMSPEC='C:\WINDOWS\system32\cmd.exe'
+CommonProgramW6432='C:\Program Files\Common Files'
+DIRSTACK=()
+DriverData='C:\Windows\System32\Drivers\DriverData'
+EM_PARENT_PROCESS_ID=10936
+EUID=1225949
+EXEPATH='C:\Program Files\Git\bin'
+FPS_BROWSER_APP_PROFILE_STRING='Internet Explorer'
+FPS_BROWSER_USER_PROFILE_STRING=Default
+GIT_INSTALL_ROOT='C:\Users\dylan.ritchings\scoop\apps\git\current'
+GROUPS=()
+HOME=/c/Users/dylan.ritchings
+HOMEDRIVE=C:
+HOMEPATH='\Users\dylan.ritchings'
+HOSTNAME=LAPGFPV3J3
+HOSTTYPE=x86_64
+HTTP_PROXY=http://webproxy-cloud.metoffice.gov.uk:8082
+IFS=$' \t\n'
+JSII_RUNTIME_PACKAGE_CACHE=disabled
+LOCALAPPDATA='C:\Users\dylan.ritchings\AppData\Local'
+LOGONSERVER='\\EXX-CMPD1-DC2'
+MACHTYPE=x86_64-pc-msys
+MSYSTEM=MINGW64
+NODE_EXTRA_CA_CERTS='C:\Program Files\Phantom\IBSA\mitm-ca-root-update.crt'
+NUMBER_OF_PROCESSORS=8
+OPTERR=1
+OPTIND=1
+OS=Windows_NT
+OSTYPE=msys
+OneDrive='C:\Users\dylan.ritchings\OneDrive - Met Office'
+OneDriveCommercial='C:\Users\dylan.ritchings\OneDrive - Met Office'
+PATH='/mingw64/bin:/usr/bin:/c/Users/dylan.ritchings/bin:/c/WINDOWS/system32:/c/WINDOWS:/c/WINDOWS/System32/Wbem:/c/WINDOWS/System32/WindowsPowerShell/v1.0:/c/WINDOWS/System32/OpenSSH:/c/Program Files/Amazon/AWSCLIV2:/c/Program Files/Microsoft VS Code/bin:/cmd:/c/Program Files/nodejs:/c/Users/dylan.ritchings/scoop/shims:/c/Users/dylan.ritchings/AppData/Roaming/npm:/c/Program Files/Python38:/c/Program Files/Python38/Scripts:/c/Users/dylan.ritchings/AppData/Roaming/Python/Python38/Scripts:/c/Program Files/7-Zip:/c/Users/dylan.ritchings/CDK/node_modules/awk-cdk/bin:%NPM_CONFIG_PREFIX%:/c/Users/dylan.ritchings/AppData/Local/Microsoft/WindowsApps:/c/Program Files (x86)/JetBrains/PyCharm Community Edition 2021.1.2/bin:/c/Users/dylan.ritchings/site-packages:/c/Users/dylan.ritchings/scoop/shims:/c/Users/dylan.ritchings/scoop/apps/emacs-k/current/bin:/c/Users/dylan.ritchings/scoop/apps/findutils/4.4.2/bin'
+PATHEXT='.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC'
+PLINK_PROTOCOL=ssh
+PPID=1
+PROCESSOR_ARCHITECTURE=AMD64
+PROCESSOR_IDENTIFIER='Intel64 Family 6 Model 140 Stepping 1, GenuineIntel'
+PROCESSOR_LEVEL=6
+PROCESSOR_REVISION=8c01
+PROGRAMFILES='C:\Program Files'
+PS4='+ '
+PSModulePath='C:\Program Files\WindowsPowerShell\Modules;C:\WINDOWS\system32\WindowsPowerShell\v1.0\Modules'
+PUBLIC='C:\Users\Public'
+PWD=/c/Users/dylan.ritchings/AppData/Roaming/.spacemacs.d
+ProgramData='C:\ProgramData'
+ProgramW6432='C:\Program Files'
+REQUESTS_CA_BUNDLE='C:\Program Files\Certificate Bundle\tls-ca-bundle.pem'
+SESSIONNAME=Console
+SHELL=C:\Program Files\Git\bin\bash.exe
+SHELLOPTS=braceexpand:hashall:interactive-comments
 SHLVL=1
+SYSTEMDRIVE=C:
+SYSTEMROOT='C:\WINDOWS'
+TEMP=/tmp
 TERM=xterm-256color
-TERM_PROGRAM=iTerm.app
-TERM_PROGRAM_VERSION=3.4.19
-TERM_SESSION_ID=w0t1p0:FC9DB30E-B1B7-42CE-A0CA-FE0881FEFE82
-TMPDIR=/var/folders/1f/zt6_0n7x6zb_rd3vj18mzfqh0000gn/T/
-TTY=not a tty
-USER=dylan
-XPC_FLAGS=0x0
-XPC_SERVICE_NAME=0
-ZSH=/Users/dylan/.oh-my-zsh
-_=/usr/bin/env
-__CFBundleIdentifier=com.googlecode.iterm2
-__CF_USER_TEXT_ENCODING=0x1F5:0:2
+TMP=/tmp
+UATDATA='C:\WINDOWS\CCM\UATData\D9F8C395-CAB8-491d-B8AC-179A1FE1BE77'
+UID=1225949
+USERDNSDOMAIN=CMPD1.METOFFICE.GOV.UK
+USERDOMAIN=CMPD1
+USERDOMAIN_ROAMINGPROFILE=CMPD1
+USERNAME=dylan.ritchings
+USERPROFILE='C:\Users\dylan.ritchings'
+WINDIR='C:\WINDOWS'
+ZES_ENABLE_SYSMAN=1
+_=/usr/bin/bash
+emacs_dir=C:/Users/dylan.ritchings/scoop/apps/emacs-k/current
+https_proxy=http://webproxy-cloud.metoffice.gov.uk:8082
